--- a/src/components/styles/Project.css
+++ b/src/components/styles/Project.css
@@ -23,6 +23,7 @@
   text-transform: uppercase;
   display: inline-block;
   font-weight: 300;
+  margin-bottom: 1rem;
 }
 
 .project__tag + .project__tag {
